# power-user-weather

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: fetch_data.rs  geocoding.rs  main.rs  models.rs  precipitation.rs  url_fetch.rs
test_tools/: test_script.sh
