[package]
name = "power-user-weather"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.41"
clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
env_logger = "0.11.9"
hex = "0.4.3"
log = "0.4.29"
once_cell = "1.21.3"
polars = { version = "0.53.0", features = [
    "lazy",
    "temporal",
    "describe",
    "parquet",
    "dtype-datetime",
    "rows",
    "pivot",
    "fmt",
] }
reqwest = { version = "0.12", features = ["json"] }
sanitize-filename = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tabled = "0.20.0"
tokio = { version = "1.40", features = ["full"] }
url = "2.5.8"
urlencoding = "2.1.3"
